# pixhloc

./: .gitignore  LICENSE  README.md  imc2024-playground.ipynb  pyproject.toml  requirements.txt
demo/: Localization.ipynb  compare_runs.ipynb  geometric_verification.ipynb  presentation-plots.ipynb  rerun.ipynb
dependencies/: antlr4_python3_runtime-4.9.3-py3-none-any.whl  einops-0.6.1-py3-none-any.whl  faiss_gpu-1.7.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  gdown-5.1.0-py3-none-any.whl  hloc-1.5-py3-none-any.whl  lightglue-1.0.0-py3-none-any.whl  omegaconf-2.3.0-py3-none-any.whl  pixhloc-1.0.0-py3-none-any.whl  prettytable-3.10.0-py3-none-any.whl  pytorch_metric_learning-2.5.0-py3-none-any.whl  xformers-0.0.22.post4-cp310-cp310-manylinux2014_x86_64.whl  xformers-0.0.26.post1-cp310-cp310-manylinux2014_x86_64.whl
pixhloc/: configs.py  cropping.py  main.py  preprocessing.py
pixhloc/pipelines/: dense_pipeline.py  pipeline.py  sparse_pipeline.py
pixhloc/utils/: concatenate.py  eval.py  utils.py
scripts/: run_hloc.py  run_pixsfm.py
